move id to path
